--- a/index.html
+++ b/index.html
@@ -5,8 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer Shop</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 <body>
-    
+    <nav>
+        <div class="logo">
+            <h4>Influencer Shop</h4>
+        </div>
+
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Product</a></li>
+            <li><a href="">Sign Up</a></li>
+            <li><a href="">Log in</a></li>
+            <li><a href=""><i class="fa-solid fa-magnifying-glass"></i></a></li>
+            <li><a href=""><i class="fa-solid fa-cart-shopping"></i></a></li>
+        </ul>
+<!-- 
+        <div class="menu-toggle">
+            <input type="checkbox" name="" id="">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div> -->
+    </nav>
+
+    <header>
+        
+    </header>
+    <main>
+        <section></section>
+        <section></section>
+    </main>
+    <footer></footer>
 </body>
 </html>
