--- a/index.html
+++ b/index.html
@@ -32,7 +32,31 @@
     </nav>
 
     <header>
-        
+        <div class="header-wrapper">
+            <div class="header-content">
+                <div class="header-content-title">
+                    <h1>Start your Journey as Freelancer</h1>
+                </div>
+                <div class="header-content-content">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex alias distinctio excepturi? Odit, quod ratione?</p>
+                </div>
+                <div class="preebook">
+                    <a href="#">Preebook now</a>
+                    <i class="fa-solid fa-arrow-right"></i>
+                </div>
+            </div>
+            <div class="header-logo">
+                <div class="wrapper-header-logo">
+                    <div class="bg-header-img">
+                        <img src="img/vlog-cam.png" alt="">
+                    </div>
+                    <div class="bg-header-logo">
+                        <img src="img/Circle design.svg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     </header>
     <main>
         <section></section>
