add other section

--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex alias distinctio excepturi? Odit, quod ratione?</p>
                 </div>
                 <div class="preebook">
-                    <a href="#">Preebook now</a>
-                    <i class="fa-solid fa-arrow-right"></i>
+                    <a href="#">Preebook now <i class="fa-solid fa-arrow-right"></i></a>                
                 </div>
             </div>
             <div class="header-logo">
@@ -58,9 +57,265 @@
         </div>
     </div>
     </header>
+
     <main>
-        <section></section>
-        <section></section>
+        <section id="e-commerce">
+            <div class="wrapper-ecom">
+                <div class="thumbnail-logo">
+                    <img src="logos/Alibaba.svg" alt="Alibaba">
+                </div>
+                <div class="thumbnail-logo">
+                    <img src="logos/Amazon.svg" alt="Amazon">
+                </div>
+                <div class="thumbnail-logo">
+                    <img src="logos/Daraz.pk Logo.svg" alt="Daraz">
+                </div>
+                <div class="thumbnail-logo">
+                    <img src="logos/Ebay.svg" alt="Ebay">
+                </div>
+                <div class="thumbnail-logo">
+                    <img src="logos/Rakuten.svg" alt="Rakuten">
+                </div>
+                <div class="thumbnail-logo">
+                    <img src="logos/Target.svg" alt="Target">
+                </div>
+                <div class="thumbnail-logo">
+                    <img src="logos/Walmart.svg" alt="Walmart">
+                </div>
+            </div>
+        </section>
+
+        <section id="collection">
+            <div class="wrapper-collection">
+                <div class="collection-title">
+                    <h1>Trending collection</h1>
+                </div>
+                <div class="collection-content">
+                    <div class="card-collection">
+                        <div class="card-img">
+                            <img src="img/tripod.png" alt="tripod">
+                        </div>
+                        <div class="card-content">
+                            <h2>Flex Tripod</h2>
+                            <p class="price">$50.4</p>
+                            <div class="rate">
+                                <div class="rate-start">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star-half-stroke"></i>
+                                </div>
+                                <div class="rate-rate">
+                                    <p>4.99</p>
+                                </div>    
+                            </div>
+                            <p class="detail">Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                        </div>
+                    </div>
+                    <div class="card-collection">
+                        <div class="card-img">
+                            <img src="img/mic.png" alt="mic">
+                        </div>
+                        <div class="card-content">
+                            <h2>Microphone</h2>
+                            <p class="price">$110.4</p>
+                            <div class="rate">
+                                <div class="rate-start">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star-half-stroke"></i>
+                                </div>
+                                <div class="rate-rate">
+                                    <p>4.99</p>
+                                </div>    
+                            </div>
+                            <p class="detail">Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                        </div>
+                    </div>
+                    <div class="card-collection">
+                        <div class="card-img">
+                            <img src="img/airpod.png" alt="airpod">
+                        </div>
+                        <div class="card-content">
+                            <h2>Airbuds</h2>
+                            <p class="price">$99.98</p>
+                            <div class="rate">
+                                <div class="rate-start">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star-half-stroke"></i>
+                                </div>
+                                <div class="rate-rate">
+                                    <p>4.99</p>
+                                </div>    
+                            </div>
+                            <p class="detail">Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                        </div>
+                    </div>
+                    <div class="card-collection">
+                        <div class="card-img">
+                            <img src="img/single-light.png" alt="single-light">
+                        </div>
+                        <div class="card-content">
+                            <h2>Green Screen</h2>
+                            <p class="price">$60.98</p>
+                            <div class="rate">
+                                <div class="rate-start">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star-half-stroke"></i>
+                                </div>
+                                <div class="rate-rate">
+                                    <p>4.99</p>
+                                </div>    
+                            </div>
+                            <p class="detail">Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                        </div>
+                    </div>
+                    <div class="card-collection">
+                        <div class="card-img">
+                            <img src="img/drone.png" alt="drone">
+                        </div>
+                        <div class="card-content">
+                            <h2>Drone</h2>
+                            <p class="price">$99.98</p>
+                            <div class="rate">
+                                <div class="rate-start">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star-half-stroke"></i>
+                                </div>
+                                <div class="rate-rate">
+                                    <p>4.99</p>
+                                </div>    
+                            </div>
+                            <p class="detail">Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                        </div>
+                    </div>
+                    <div class="card-collection">
+                        <div class="card-img">
+                            <img src="img/lights.png" alt="lights">
+                        </div>
+                        <div class="card-content">
+                            <h2>Lights</h2>
+                            <p class="price">$100.98</p>
+                            <div class="rate">
+                                <div class="rate-start">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star-half-stroke"></i>
+                                </div>
+                                <div class="rate-rate">
+                                    <p>4.99</p>
+                                </div>    
+                            </div>
+                            <p class="detail">Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                        </div>
+                    </div>
+                    <div class="card-collection">
+                        <div class="card-img">
+                            <img src="img/setup.png" alt="setup">
+                        </div>
+                        <div class="card-content">
+                            <h2>Lights Set</h2>
+                            <p class="price">$72.98</p>
+                            <div class="rate">
+                                <div class="rate-start">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star-half-stroke"></i>
+                                </div>
+                                <div class="rate-rate">
+                                    <p>4.99</p>
+                                </div>    
+                            </div>
+                            <p class="detail">Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                        </div>
+                    </div>
+                    <div class="card-collection">
+                        <div class="card-img">
+                            <img src="img/camera.png" alt="camera">
+                        </div>
+                        <div class="card-content">
+                            <h2>Vlogging Camera</h2>
+                            <p class="price">$1399.98</p>
+                            <div class="rate">
+                                <div class="rate-start">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star-half-stroke"></i>
+                                </div>
+                                <div class="rate-rate">
+                                    <p>4.99</p>
+                                </div>    
+                            </div>
+                            <p class="detail">Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                        </div>
+                    </div>
+                    <div class="card-collection">
+                        <div class="card-img">
+                            <img src="img/action.png" alt="gopro">
+                        </div>
+                        <div class="card-content">
+                            <h2>Action Camera</h2>
+                            <p class="price">$299.98</p>
+                            <div class="rate">
+                                <div class="rate-start">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star-half-stroke"></i>
+                                </div>
+                                <div class="rate-rate">
+                                    <p>4.99</p>
+                                </div>    
+                            </div>
+                            <p class="detail">Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="see-more">
+                    <p><a href="#">See More  <i class="fa-solid fa-arrow-right"></i></a></p>
+                </div>
+            </div>
+        </section>
+
+        <section id="product-more">
+            <div class="product-more">
+                <div class="wrapper-more-logo">
+                    <div class="bg-more-img">
+                    <img src="img/gear.png" alt="gear">
+                    </div>
+                </div>
+                <div class="more-content">
+                    <div class="more-content-title">
+                        <h1>Featured products at one place</h1>
+                    </div>
+                    <div class="more-content-content">
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    </div>
+                    <div class="preebook j">
+                        <a href="#">Join now <i class="fa-solid fa-arrow-right"></i></a>                
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
