--- a/index.html
+++ b/index.html
@@ -317,6 +317,22 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+
+    <footer>
+        <div class="footer-wrapper">
+            <div class="footer">
+                <h2>Influencer products</h2>
+                <p class="satu">Copyright © 2020  influencer products</p>
+                <p class="satu">All rights reserved</p>
+                <div class="social-icon">
+                    <div class="bg-icon"><a href="#"><i class="fa-brands fa-instagram"></i></a></div>
+                    <div class="bg-icon"><a href="#"><i class="fa-brands fa-dribbble"></i></a></div>
+                    <div class="bg-icon"><a href="#"><i class="fa-brands fa-twitter"></i></a></div>
+                    <div class="bg-icon"><a href="#"><i class="fa-brands fa-youtube"></i></a></div>
+                </div>
+            </div>
+            
+        </div>
+    </footer>
 </body>
 </html>
